deploy/k8s/angular.yml
apiVersion: v1
kind: Service
metadata:
  name: angular
spec:
  selector:
    app: angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: somkiat/demo-angular:1.0
        ports:
        - containerPort: 80
